update learn link

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Realtime Todo App | GraphQL Tutorials | learn.hasura.io</title>
+    <title>Realtime Todo App | GraphQL Tutorials | hasura.io/learn</title>
   </head>
   <body>
     <noscript>
